[project]
name = "traffic-control-env"
version = "0.1.0"
description = "Autonomous traffic control OpenEnv environment"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "pydantic",
    "numpy",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "env.environment:TrafficEnv"