[project]
name = "traffic-control-env"
version = "0.1.0"
description = "Autonomous traffic control OpenEnv environment"
authors = [{ name = "Kaushtubh Pandey" }]
dependencies = [
    "pydantic",
    "numpy",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[tool.openenv]
spec_version = 1
name = "autonomous-traffic-control"
type = "environment"
runtime = "docker"
app = "app.py"
port = 7860